syntax = "proto3";
package communication;
option go_package=".;communication";

message QueryByIdRequest {
  string id = 1;
  string user_id = 2;
}

message QueryByUserRequest {
  string user_id = 1;
  bool unsorted = 2;
}
